--- a/sections/featured-collections-5.liquid
+++ b/sections/featured-collections-5.liquid
@@ -102,7 +102,7 @@ grid-template-columns: 1fr 1fr;
       {%- render 'style-section' -%}
         <div class="section-block" >
           <div class="{{ section.settings.setwidth }}">
-            {%- render 'section-heading' -%}
+            {%- render 'section-heading', btn: true, collection_url: collections.first.url -%}
                 <div class="collection-grid {{ class }} row {% if section.settings.enable_padding == false %} mx-0 {% endif %}" id="collection-grid-{{ section.id }}">
                   {%- for block in section.blocks -%}
                     {%-liquid
@@ -114,7 +114,7 @@ grid-template-columns: 1fr 1fr;
                     
                   <div class="collect-grid-{{ block.id }} 
                     {% if layout == 'grid' %} {{ section.settings.col }} {%- else -%} collage-item {% endif %}
-                    {% if section.settings.enable_padding == false %} px-0 {% endif %}
+                    {% if section.settings.enable_padding == false %} px-1 {% endif %}  {% comment %} Here we can Change the padding of the block in grid collection {% endcomment %}
                     {% if forloop.index == 1 %} collage-item-big {% endif %}
                     " {{ block.shopify_attributes }}>
                     <style>
@@ -209,7 +209,7 @@ grid-template-columns: 1fr 1fr;
                           <div class="m-0 type-onimage position-absolute collection-card__meta w-100 d-flex flex-column h-100 justify-content-center p-4 text-center">
                             <h4 class="mb-1 title-collection {{ section.settings.size_title }}">
                               <a class="" href="{{ featured_collection.url | default : '#' }}">
-                                {{ collectionTitle }}
+                                {{ collectionTitle }}  {% comment %}Here we can chnage the title{% endcomment %}
                               </a>
                             </h4>
                               <p class="item-counts ">{{ count }}</p> 
@@ -395,6 +395,18 @@ grid-template-columns: 1fr 1fr;
       "id": "des",
       "label": "HTML / Description"
     },
+     {
+          "type": "text",
+          "id": "button_name",
+          "label": "Button Name",
+          "default":"Shop The Collection"
+        },
+        {
+          "type": "url",
+          "id": "button_url",
+          "label": "Button Link",
+          "default":"/"
+        },
     {
       "type": "select",
       "id": "align-heading",
@@ -470,6 +482,10 @@ grid-template-columns: 1fr 1fr;
         {
           "value": "col-lg-6",
           "label": "2"
+        },
+          {
+          "value": "col-lg-2",
+          "label": "6"
         }
       ]
     },
