--- a/sections/grid-banner.liquid
+++ b/sections/grid-banner.liquid
@@ -1,6 +1,7 @@
 <!-- grid-banner.liquid -->
 
 <style>
+ 
   {%- if section.settings.show_overlay %}
     {% assign hex2rgb_hex = section.settings.bg_overlay %}
     .customstyle{{ section.id }} .banner-theme .banner-overlay{
@@ -24,7 +25,9 @@
   {%- render 'style-section' -%}
 <div class="{{ section.settings.setwidth }}">
   <div class="section-block">
-    {%- render 'section-heading' -%}
+  <div class="heading-collection">
+     {%- render 'section-heading', btn: true, collection_url: collections.first.url -%}
+</div>
     <div class="row {% if section.settings.no_gutter %}no-gutters{% endif %}">
       {%- for block in section.blocks -%}
       {%- assign text_color = block.settings.colordef -%}
@@ -69,7 +72,7 @@
                     <div class="subtop mb-3">{{ block.settings.subtitle }}</div>
                   {%- endif -%}
                   {%- if block.settings.title != blank -%}
-                <h3 class="{% if block.settings.description != blank %} mb-3 {% else %} mb-4 {% endif %} {{ block.settings.size_text }} ">{{ block.settings.title }}</h3>
+                <h5 class="{% if block.settings.description != blank %} mb-3 {% else %} mb-4 {% endif %} {{ block.settings.size_text }} ">{{ block.settings.title }}</h5>
                   {%- endif -%}
                   {%- if block.settings.description != blank -%}
                     <div class="rte-setting mb-3 txt-body">{{ block.settings.description }}</div>
@@ -245,13 +248,13 @@
     {
       "type": "text",
       "id": "title_top",
-      "label": "Sub Title Top",
+      "label": "Sub Title Top AAAA",
       "default": "Sub Title Top"
     },
     {
       "type": "text",
       "id": "title",
-      "label": "Title",
+      "label": "Title AAA",
       "default": "Grid banner"
     },
     {
@@ -259,6 +262,18 @@
       "id": "des",
       "label": "HTML / Description"
     },
+     {
+          "type": "text",
+          "id": "button_name",
+          "label": "Button Name",
+          "default":"Shop The Collection"
+        },
+        {
+          "type": "url",
+          "id": "button_url",
+          "label": "Button Link",
+          "default":"/"
+        },
     {
       "type": "select",
       "id": "align-heading",
