--- a/sections/parallax-banner.liquid
+++ b/sections/parallax-banner.liquid
@@ -54,6 +54,7 @@
   .parallax-banner__wraper--{{ section.id }}::before{
     content:"";
         position: absolute;
+        color: white;
         top: 0;
         left: 0;
         right: 0;
@@ -61,6 +62,9 @@
         z-index: 1;
         background: {%- if section.settings.gradient_bg != blank -%} {{ section.settings.gradient_bg }} {%- else -%}  {{ section.settings.bg_overlay }}{%- endif -%};
       opacity: {{ section.settings.opacity_bg_overlay }};
+  }
+  .subhead {
+  color: white;
   }
   .parallax-banner__wraper--{{ section.id }} {
     {% if text_color != 'transparent' %}
@@ -97,7 +101,7 @@
                 <div class="hero-image__space" style="--hero-spacer: {{ block.settings.hero-spacer }}px;"></div>
               {%- when 'sub_title' -%}
                   {%- if block.settings.subtitle != blank -%}
-                    <div class="subtop mb-3">{{ block.settings.subtitle }}</div>
+                    <div class="subhead subtop mb-3">{{ block.settings.subtitle }}</div>
                   {%- endif -%}
                 {%- when 'heading' -%}
                   {%- if block.settings.title -%}
