--- a/snippets/block-social.liquid
+++ b/snippets/block-social.liquid
@@ -1,29 +1,23 @@
+
 <div class="text block-socialtop">
     <ul class="list-inline social-icons">
       {%- if settings.social_facebook_link != blank -%}
       <li class="list-inline-item">
-        <a href="{{ settings.social_facebook_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Facebook' }}">
+        <a class="bg-icon" href="{{ settings.social_facebook_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Facebook' }}">
           {%- render 'icon-facebook' -%}
           <span class="icon__fallback-text">Fb</span>
         </a>
       </li>
       {%- endif -%}
-      {%- if settings.social_twitter_link != blank -%}
+     {%- if settings.social_twitter_link != blank -%}
       <li class="list-inline-item">
         <a href="{{ settings.social_twitter_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Twitter' }}">
           {%- render 'icon-twitter' -%}
           <span class="icon__fallback-text">Tw</span>
         </a>
       </li>
-      {%- endif -%}
-      {%- if settings.social_pinterest_link != blank -%}
-      <li class="list-inline-item">
-        <a href="{{ settings.social_pinterest_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Pinterest' }}">
-          {%- render 'icon-pinterest' -%}
-          <span class="icon__fallback-text">Pin</span>
-        </a>
-      </li>
-      {%- endif -%}
+      {%- endif -%} 
+    
       {%- if settings.social_instagram_link != blank -%}
       <li class="list-inline-item">
         <a href="{{ settings.social_instagram_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Instagram' }}">
@@ -32,22 +26,14 @@
         </a>
       </li>
       {%- endif -%}
-      {%- if settings.social_tumblr_link != blank -%}
+       {%- if settings.social_tumblr_link != blank -%}
       <li class="list-inline-item">
         <a href="{{ settings.social_tumblr_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Tumblr' }}">
           {%- render 'icon-tumblr' -%}
           <span class="icon__fallback-text">Tum</span>
         </a>
       </li>
-      {%- endif -%}
-      {%- if settings.social_snapchat_link != blank -%}
-      <li class="list-inline-item">
-        <a href="{{ settings.social_snapchat_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Snapchat' }}">
-          {%- render 'icon-snapchat' -%}
-          <span class="icon__fallback-text" >Snap</span>
-        </a>
-      </li>
-      {%- endif -%}
+      {%- endif -%} 
       {%- if settings.social_youtube_link != blank -%}
       <li class="list-inline-item">
         <a href="{{ settings.social_youtube_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'YouTube' }}">
@@ -55,7 +41,7 @@
           <span class="icon__fallback-text">You</span>
         </a>
       </li>
-      {%- endif -%}
+      {%- endif -%} 
       {%- if settings.social_vimeo_link != blank -%}
       <li class="list-inline-item">
         <a href="{{ settings.social_vimeo_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Vimeo' }}">
@@ -63,7 +49,7 @@
           <span class="icon__fallback-text" >Vim</span>
         </a>
       </li>
-      {%- endif -%}
+      {%- endif -%} 
       {%- if settings.social_tiktok_link != blank -%}
       <li class="list-inline-item">
         <a href="{{ settings.social_tiktok_link }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Tiktok' }}">
@@ -72,5 +58,21 @@
         </a>
       </li>
     {%- endif -%}
+      {%- if settings.social_snapchat_link != blank -%}
+      <li class="list-inline-item">
+        <a href="{{ settings.social_snapchat_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Snapchat' }}">
+          {%- render 'icon-snapchat' -%}
+          <span class="icon__fallback-text" >Snap</span>
+        </a>
+      </li>
+      {%- endif -%} 
+        {%- if settings.social_pinterest_link != blank -%}
+      <li class="list-inline-item">
+        <a class="bg-icon" href="{{ settings.social_pinterest_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Pinterest' }}">
+          {%- render 'icon-pinterest' -%}
+          <span class="icon__fallback-text">Pin</span>
+        </a>
+      </li>
+      {%- endif -%}
     </ul>
   </div>
