--- a/snippets/blog-grid-1.liquid
+++ b/snippets/blog-grid-1.liquid
@@ -1,4 +1,15 @@
 <!-- blog-grid-1.liquid -->
+{% style %}
+  .blog__title-link_custom{
+    color: #00000;
+    font-family: "Gilda Display";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: capitalize;
+      }
+{% endstyle %}
 <div class="blog__item blog__item--1 {% if template contains 'index' %} pb-0 {% endif %}" data-aos="{{ animation }}">
   {%- if article.image -%}
   <div class="content-block__image mb-4">
@@ -44,14 +55,14 @@
         </div>
       {%- endif -%}
       <div class="blog_comment align-items-center d-flex mb-3 txt-body-70">
-        {% render 'icon-comment' %}
+        {% render 'icon-comment' %} 
         {{ 'blogs.comments.with_count' | t: count: article.comments_count }}
       </div>
     </div>
     {%- endif -%}
-  <h4 class="blog__title-link {% if settings.enable_short %}  mb-3 {% else %} mb-4 {% endif %}"><a href="{{ article.url }}">{{ article.title }}</a></h4>
+  <div class="blog__title-link_custom {% if settings.enable_short %}  mb-3 {% else %} mb-4 {% endif %}"><a href="{{ article.url }}">{{ article.title }}</a></div>
   {%- if enable_short -%}
-  <div style="width:70px;"><hr ></div>
+  <div style="width:70px; background:gray; height:2px"><hr ></div>
   <div class="rte rte--indented-images mb-4">
     {%- if article.excerpt.size > 0 -%}
     {{ article.excerpt }}
