--- a/snippets/header-logo-left.liquid
+++ b/snippets/header-logo-left.liquid
@@ -3,6 +3,12 @@
   .icon-humbeger-btn {
      display: none !important;
   }
+  .meganav{
+    background:transparent !important;
+        opacity:0.8 !important;
+
+
+  }
    
 {% endstyle %}
   <div class="{{ container }}">
@@ -43,6 +49,7 @@
           </ul>
         </nav>
       {%- else-%}
+        {% comment %} /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// {% endcomment %}
       <nav class="nav-bar d-none d-lg-block" role="navigation">
         <ul class="site-nav">
           {%- if layout_header == 'logo-center-navigation-left' and enable_menu_vertical and sl_menu_vertical == 'click-menu' -%}
@@ -118,6 +125,7 @@
           {%- endfor -%}
         </ul>
       </nav>    
+      {% comment %} //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// {% endcomment %}
     {%- endif -%}
     </div>
     <div class="header-bottom__right col-bottom__right">
@@ -134,7 +142,7 @@
             -%}
           </div>
       {%- render 'header-search', link_list_search: section.settings.link_list_search, e_search: section.settings.sidebar_search -%}
-      {%- render 'header-login' -%}
+      {% comment %} {%- render 'header-login' -%} {% endcomment %}
       {%- render 'block-wishlist' -%}
       {%- render 'block-cart' -%}
     </div>
